# ImageManager

./: pyproject.toml
ImageManager/: main.py
ImageManager/app/: __init__.py  checks.py  exif_data.py  globals.py  helper.py  iterate.py  read.py
ImageManager/data/: __init__.py  im.atd
ImageManager/gui/: globals.py  mdi.py
ImageManager/gui/dialogs/first_run/: __init__.py  actions.py  dialog.ui
ImageManager/gui/mdis/clean_up/: mdi.ui
ImageManager/gui/mdis/doublets/: __init__.py  mdi.ui
ImageManager/gui/mdis/progress/: __init__.py  mdi.ui
ImageManager/gui/mdis/projectmanagement/: __init__.py  mdi.ui
ImageManager/gui/windows/main_window/: __init__.py  __init__sicher.py  window.ui
