[tool.poetry]
name = "ImageManager"
version = "0.1.0"
description = ""
authors = ["ckoeste1as <christian.koester@axelspringer.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pendulum = "^2.1.2"
exif = "^1.3.5"
ImageHash = "^4.3.1"
PyQt6 = "^6.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
